Add base(with navbar), contact and home_page HTML templates with Django templates.

--- a/Dev/ecommerceenv/src/templates/home_page.html
+++ b/Dev/ecommerceenv/src/templates/home_page.html
@@ -1,4 +1,34 @@
+{% extends "base.html" %}
 {% load static %}
+
+<title>Home Page Template</title>
+
+{% block base_head %}
+<link rel="stylesheet" href="{% static 'css/main.css' %}">
+{% endblock %}
+
+{% block content %}
+<div class="text-center">
+	<h1>{{ title }}</h1>
+</div>
+<div class="container">
+	<div class="row">
+		<div class="col">
+			<img src="{% static 'img/Join-Us-Banner-c.png' %}" class="img-fluid">
+			<p>{{ content }}</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col">
+			<p>{{ premium_content }}</p>
+		</div>
+	</div>
+</div>
+
+{% endblock %}
+
+
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -11,22 +41,6 @@
 		<link rel="stylesheet" href="{% static 'css/main.css' %}">
 	</head>
 	<body>
-		<div class="text-center">
-			<h1>{{ title }}</h1>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col">
-					<img src="{% static 'img/Join-Us-Banner-c.png' %}" class="img-fluid">
-					<p>{{ content }}</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col">
-					<p>{{ premium_content }}</p>
-				</div>
-			</div>
-		</div>
 		
 
 		<!-- Optional JavaScript -->
