--- a/Dev/ecommerceenv/src/products/templates/products/list.html
+++ b/Dev/ecommerceenv/src/products/templates/products/list.html
@@ -1,7 +1,21 @@
-{# {{ object_list }} #}
+{% extends "base.html" %}
 
-{% for obj in object_list %}
+{% block content %}
+	<div class='container'>
+		<div class='row'>
 
-<a href='{{ obj.get_absolute_url }}'>{{ obj.title }}</a><br>
+			{% for obj in object_list %}
+				<div class='col'>
+				{{ forloop.counter }}
+				{% include "products/snippets/card.html" with instance=obj %}
+				
 
-{% endfor %}
+				{% if forloop.counter|divisibleby:3 %}
+					</div></div><div class="row"><div class="col-12"><hr></div>
+				{% else %}
+					</div>
+				{% endif %}
+			{% endfor %}
+		</div>
+	</div>
+{% endblock %}
