--- a/Dev/ecommerceenv/src/templates/base.html
+++ b/Dev/ecommerceenv/src/templates/base.html
@@ -12,9 +12,10 @@
 	</head>
 	<body>
 		{% include 'base/navbar.html' with brand_name='eCommerce' %}
+		<div class="container">
+			{% block content %}{% endblock %}
+		</div>
 		
-		{% block content %}{% endblock %}
-
 		{% include 'base/js.html' %}
 	</body>
 </html>
